--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,7 @@ path: home
 
   <p class="text-xl">Conversational Collective is a community exploring, learning, and creating technologies that leverage human conversation including multi-modal, voice-first, and chat. We believe the future of user experience lies in voice and text-based interfaces.</p>
 
-  <p class="text-xl mt-8">Founded in 2017, this group is for anyone interested in conversational interfaces—conversation strategy, design, user experience, development, NLU, machine learning, AI, ethics, etc. We host talks from industry thought leaders and networking events as well as share information about upcoming voice and chat events.</p>
+  <p class="text-xl mt-8">Founded in 2017 by <a href="https://www.linkedin.com/in/bauerhorst/" target="_blank">Jessica Nunn</a>, this group is for anyone interested in conversational interfaces—conversation strategy, design, user experience, development, NLU, machine learning, AI, ethics, etc. We host talks from industry thought leaders and networking events as well as share information about upcoming voice and chat events.</p>
 
   <a href="/join" class="mt-16 rounded text-white bold join text-4xl w-64 mx-auto block text-center">Join us</a>
 </div>
